invoices+htlcswitch+lnrpc: cancel invoice
