# lnrpc/rpc.swagger.json
@@ -1131,7 +1131,8 @@
       "type": "string",
       "enum": [
         "OPEN",
-        "SETTLED"
+        "SETTLED",
+        "CANCELED"
       ],
       "default": "OPEN"
     },
@@ -1288,10 +1289,12 @@
       "type": "object",
       "properties": {
         "chain": {
-          "type": "string"
+          "type": "string",
+          "title": "/ The blockchain the node is on (eg bitcoin, litecoin)"
         },
         "network": {
-          "type": "string"
+          "type": "string",
+          "title": "/ The network the node is on (eg regtest, testnet, mainnet)"
         }
       }
     },
